relaxng-gen/tests/snapshots/generate__attr_solo.snap
---
source: relaxng-gen/tests/generate.rs
assertion_line: 21
expression: output
---
<tr class="card" bool="true"/>
