relaxng-gen/tests/snapshots/generate__backupdisktype.snap
---
source: relaxng-gen/tests/generate.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<backupdisktype type="file"/>
