relaxng-gen/tests/snapshots/generate__parent_is_this.snap
---
source: relaxng-gen/tests/generate.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<wordsize>31</wordsize>
