relaxng-gen/tests/snapshots/generate__recurse-inline.snap
---
source: relaxng-gen/tests/generate.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<top>
  <code>
    <em>text</em>
  </code>
</top>
