relaxng-gen/tests/snapshots/generate__simple.snap
---
source: relaxng-tool/tests/generate.rs
assertion_line: 12
expression: output
---
<addressBook/>
