relaxng-gen/tests/snapshots/generate__tuto1.bad.snap
---
source: relaxng-gen/tests/generate.rs
expression: "String::from_utf8_lossy(&output.stdout).to_string()"
---
<addressBook/>
