relaxng-gen/tests/snapshots/generate__tuto1.ko.snap
---
source: relaxng-gen/tests/generate.rs
expression: "String::from_utf8_lossy(&output.stderr).to_string()"
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.01s
     Running `target/debug/test /home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/tuto1.ko.xml`

thread 'main' panicked at src/main.rs:11:49:
called `Result::unwrap()` on an `Err` value: BuilderMissingField("card", "email")
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
