relaxng-gen/tests/snapshots/generate__tuto1c.snap
---
source: relaxng-tool/tests/generate.rs
expression: output
---
<addressBook>
  <card>
    <name>John Smith</name>
    <email>js@example.com</email>
  </card>
  <card>
    <name>Fred Bloggs</name>
    <email>fb@example.net</email>
    <note>Some note</note>
  </card>
</addressBook>
