relaxng-gen/tests/snapshots/generate__tuto2.snap
---
source: relaxng-tool/tests/generate.rs
expression: output
---
<addressBook>
  <card>
    <givenName>John</givenName>
    <familyName>Smith</familyName>
    <email>js@example.com</email>
  </card>
  <card>
    <name>Fred Bloggs</name>
    <email>fb@example.net</email>
  </card>
</addressBook>
